# mioXpektron

./: LICENSE  README.md  pyproject.toml  readthedocs.yaml  requirements-dev.txt  requirements.txt
docs/: api.rst  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  make.bat  pipeline.rst  quickstart.rst  requirements.txt
docs/modules/: adaptive.rst  analysis.rst  baseline.rst  calibration.rst  denoise.rst  detection.rst  index.rst  normalization.rst  plotting.rst  utils.rst
mioXpektron/: __init__.py  _metadata.py  adaptive.py  pipeline.py
mioXpektron/analysis/: __init__.py  cnmf.py  compare.py  embeddings.py  metrics.py  ml.py  optional.py  plots.py  prepare.py  stats.py  tuning.py  workflow.py
mioXpektron/baseline/: COLUMN_NAMING.md  baseline_base.py  baseline_batch.py  baseline_eval.py  baseline_main.py  flat_window_suggester.py  test_baseline_selection.py  test_column_aliases.py
mioXpektron/denoise/: denoise_batch.py  denoise_doc.md  denoise_main.py  denoise_select.py  main.py  test_denoise_selection.py  test_variance_stabilization.py
mioXpektron/detection/: __init__.py  check_overlapping_peaks.py  detection.py  peak_analysis.py  test_noise_models.py  test_peak_semantics.py
mioXpektron/normalization/: __init__.py  main.py  normalization.py  normalization_eval.py  preprocessing.py  test_normalization_methods.py  tic_count.py
mioXpektron/plotting/: plot.py  plot_peaks.py
mioXpektron/recalibrate/: __init__.py  _models.py  auto_calibrator.py  calibrate_spectrum.py  flexible_calibrator.py  flexible_calibrator_debug.py  peak_picker.py  peak_picker_uncal.py  test_autodetect_fallbacks.py  test_model_semantics.py
mioXpektron/utils/: __init__.py  analysis.py  file_management.py  main.py
tests/: conftest.py  test_adaptive.py  test_analysis_ml_workflow.py  test_analysis_stats_prepare.py  test_baseline_base.py  test_calibration_models.py  test_denoise_filtering.py  test_detection.py  test_file_management.py  test_io_and_preprocessing.py  test_metadata.py  test_normalization_functions.py  test_peak_picker.py  test_pipeline.py
tools/: sync_metadata.py
